--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <canvas></canvas>
 
-
+  <p>this is going to be a test on testRepo</p>
   <script src="canvas.js"></script>
 </body>
 </html>
